--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -25,7 +25,7 @@ defaults:
 
 jobs:
   build:
-    runs-on: debian-stable
+    runs-on: ubuntu-22.04
     env:
       HUGO_VERSION: 0.111
     steps:
